syntax = "proto2";

package filesystem_scrubbing;

option go_package = "github.com/ydb-platform/nbs/cloud/disk_manager/internal/pkg/dataplane/filesystem_scrubbing/config";

////////////////////////////////////////////////////////////////////////////////

message FilesystemScrubbingConfig {
    optional uint32 TraversalWorkersCount = 1 [default = 100];
    optional uint64 SelectNodesToListLimit = 2 [default = 1000];
}
